[gd_scene load_steps=6 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Shwumatik.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.133333, 0.917647, 0.0666667, 1 )
self_modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
margin_left = 400.0
margin_top = 300.0
margin_right = 480.0
margin_bottom = 380.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="WeatherIcon" type="TextureRect" parent="."]
margin_left = 340.0
margin_top = 280.0
margin_right = 380.0
margin_bottom = 320.0

[node name="Label2" type="Label" parent="."]
margin_left = 400.0
margin_top = 300.0
margin_right = 440.0
margin_bottom = 314.0

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
